--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.remgant</groupId>
     <artifactId>astro</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <scm>
-        <connection>scm:svn:https://subversion.assembla.com/svn/remgant/astro</connection>
-        <url>https://www.assembla.com/code/remgant/subversion/nodes/astro</url>
+        <connection>scm:svn:https://subversion.assembla.com/svn/remgant/astro/tags/astro-1.0</connection>
+        <url>https://www.assembla.com/code/remgant/subversion/nodes/astro/tags/astro-1.0</url>
     </scm>
 
     <dependencies>
