--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 
     <groupId>net.remgant</groupId>
     <artifactId>astro</artifactId>
-    <version>1.0</version>
+    <version>2.0-SNAPSHOT</version>
 
     <scm>
-        <connection>scm:svn:https://subversion.assembla.com/svn/remgant/astro/tags/astro-1.0</connection>
-        <url>https://www.assembla.com/code/remgant/subversion/nodes/astro/tags/astro-1.0</url>
+        <connection>scm:svn:https://subversion.assembla.com/svn/remgant/astro</connection>
+        <url>https://www.assembla.com/code/remgant/subversion/nodes/astro</url>
     </scm>
 
     <dependencies>
