--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>gson</artifactId>
             <version>2.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jdatepicker/jdatepicker -->
+        <dependency>
+            <groupId>org.jdatepicker</groupId>
+            <artifactId>jdatepicker</artifactId>
+            <version>1.3.4</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
